# PurgeDisk

./: .gitignore  Cargo.toml  README.md  package.json
.github/workflows/: build.yml  test.yml
src/: error.rs  lib.rs  main.rs
src-gui/: index.html  package-lock.json  package.json
src-gui/src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/audit/: audit.rs  mod.rs
src/device/: info.rs  mod.rs  platform.rs
src/tui/: app.rs  event.rs  format.rs  mod.rs  ui.rs
src/tui/screens/: confirm.rs  home.rs  logs.rs  mod.rs  progress.rs  result.rs
src/wipe/: engine.rs  mod.rs
