[workspace]
members = ["src-tauri"]
resolver = "2"

[package]
name = "purgedisk"
version = "0.1.0"
edition = "2021"
description = "企业级 U 盘数据合规销毁工具 - DoD 5220.22-M 标准"
license = "MIT"
rust-version = "1.70"

[lib]
name = "purgedisk"
path = "src/lib.rs"

[[bin]]
name = "purgedisk"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# 密码学
ring = "0.17"
rand = "0.8"
# 时间
chrono = "0.4"
# TUI
ratatui = "0.28"
crossterm = "0.28"
# 日志
log = "0.4"
env_logger = "0.11"
# 错误处理
thiserror = "2"
anyhow = "1"
# 并发
parking_lot = "0.12"
# 系统信息
hostname = "0.4"
# 路径
dirs = "5"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Storage",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_System_SystemInformation",
] }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
strip = true
